--- a/index.html
+++ b/index.html
@@ -42,16 +42,17 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#intro">Home</a></li>
-        <li><a href="#about">About</a></li>
-		<li><a href="#service">Publications</a></li>
-		<li><a href="#contact">Contact</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
+      
+        <li class="active"><a href="#intro" style="color:white">Home</a></li>
+        <li><a href="#about" style="color:white">About</a></li>
+		<li><a href="#service" style="color:white">Publications</a></li>
+		<li><a href="#contact" style="color:white">Contact</a></li>
+        <li class="dropdown" >
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="color:white">Projects <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Example menu</a></li>
-            <li><a href="#">Example menu</a></li>
-            <li><a href="#">Example menu</a></li>
+            <li><a href="http://acadblogs.wheatoncollege.edu/mdrout/">Anglo Saxon Aloud</a></li>
+            <li><a href="http://michaeldrout.com/GrammarBook2005/OnlineKAG2005/main.html">King Alfred's Grammar Book</a></li>
+            <li><a href="http://michaeldrout.com/SeafarerProject/Seafarer/Welcome.html">Seafarer</a></li>
           </ul>
         </li>
       </ul>
