--- a/index.html
+++ b/index.html
@@ -357,9 +357,9 @@
                                 Subject</label>
                             <select id="subject" name="subject" class="form-control" required="required">
                                 <option value="na" selected="">Choose One:</option>
-                                <option value="service">General Customer Service</option>
+                                <option value="service">Project</option>
                                 <option value="suggestions">Suggestions</option>
-                                <option value="product">Product Support</option>
+                                <option value="product">Others</option>
                             </select>
                         </div>
                     </div>
