add background color

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 
 	<!-- Section: intro -->
-    <section id="intro" class="intro">
+    <section id="intro" style="background-color: black" class="intro">
 	
 		<div class="slogan">
 			<h2>     <span class="text_color">Michael Drout</span> </h2>
